...
/// should be move here and updated throughout the app.
struct AccessibilityIdentifiers {
    /// Used for toolbar/URL bar buttons since our classes are built that buttons can live in one or the other
    /// Using only those a11y identifiers for both ensures we have standard way to refer to buttons from iPad to iPhone
    struct Toolbar {
        static let urlBarBorder = "TabToolbar.urlBarBorder"
        static let settingsMenuButton = "TabToolbar.menuButton"
        static let homeButton = "TabToolbar.homeButton"
        static let trackingProtection = "TabLocationView.trackingProtectionButton"
        static let readerModeButton = "TabLocationView.readerModeButton"
        static let reloadButton = "TabLocationView.reloadButton"
        static let shareButton = "TabLocationView.shareButton"
        static let summarizeButton = "TabLocationView.summarizeButton"
...
        static let stopButton = "TabToolbar.stopButton"
        static let bookmarksButton = "TabToolbar.libraryButton"
    }

    struct Browser {
        struct TopTabs {
            static let collectionView = "Top Tabs View"
            static let privateModeButton = "TopTabsViewController.privateModeButton"
        }

        struct UrlBar {
            static let scanQRCodeButton = "urlBar-scanQRCode"
            static let cancelButton = "urlBar-cancel"
            static let searchTextField = "address"
        }

        struct KeyboardAccessory {
            static let doneButton = "KeyboardAccessory.doneButton"
            static let nextButton = "KeyboardAccessory.nextButton"
            static let previousButton = "KeyboardAccessory.previousButton"
...
    struct MainMenu {
        struct SiteProtectionsHeaderView {
            static let header = "MainMenu.SiteProtectionHeader"
        }

        struct HeaderBanner {
            static let closeButton = "MainMenu.HeaderBanner.CloseMenuButton"
        }

        struct HeaderView {
            static let mainButton = "MainMenu.MainButton"
            static let closeButton = "MainMenu.CloseMenuButton"
        }
...
        struct CertificatesScreen {
            static let headerView = "CertificatesViewController.HeaderView"
        }
    }

    struct FirefoxHomepage {
        static let collectionView = "FxCollectionView"

        struct HomeTabBanner {
            static let titleLabel = "HomeTabBanner.titleLabel"
            static let descriptionLabel = "HomeTabBanner.descriptionLabel"
            static let descriptionLabel1 = "HomeTabBanner.descriptionLabel1"
            static let descriptionLabel2 = "HomeTabBanner.descriptionLabel2"
...
            static let bookmarks = "bookmarksTitle"
            static let merino = "pocketTitle"
            static let topSites = "topSitesTitle"
        }

        struct TopSites {
            static let itemCell = "TopSitesCell"
        }

        struct SearchBar {
            static let itemCell = "SearchBarCell"
        }

...
        static let imageView = "surveyImageView"
    }

    struct Photon {
        static let closeButton = "PhotonMenu.close"
        static let view = "Action Sheet"
        static let tableView = "Context Menu"
        static let pasteAction = "pasteAction"
        static let pasteAndGoAction = "pasteAndGoAction"
    }

    struct Alert {
        static let cancelDownloadResume = "cancelDownloadAlert.resume"
...
